tests/fixtures/errors/type_mismatch.assura
// MUST REJECT A03001
// Adding a string to an integer should produce a type mismatch error.

contract TypeMismatch {
  input { x: Int }
  requires { x + "hello" > 0 }
}
